--- a/src/app/shared/components/checkbox/checkbox.component.html
+++ b/src/app/shared/components/checkbox/checkbox.component.html
@@ -1,5 +1,5 @@
 <div [class]="wrapperClasses()">
-  <div class="checkbox-input-wrapper">
+  <div class="checkbox__wrapper">
     <input
       #checkboxElement
       type="checkbox"
