--- a/src/app/shared/components/form-field/form-field.component.html
+++ b/src/app/shared/components/form-field/form-field.component.html
@@ -4,7 +4,7 @@
       [forId]="fieldId()"
       [label]="label()"
       [required]="required()"
-      [labelClass]="'form-field-label'"
+      [labelClass]="'form-field__label'"
     />
   }
 
