--- a/src/app/shared/components/input-footer/input-footer.component.html
+++ b/src/app/shared/components/input-footer/input-footer.component.html
@@ -6,7 +6,7 @@
   }
 
   @if (shouldShowCharCount()) {
-    <span class="input-char-count" aria-live="polite" aria-atomic="true">
+    <span class="input-footer__char-count" aria-live="polite" aria-atomic="true">
       {{ charCountText() }}
     </span>
   }
