--- a/src/app/shared/components/radio/radio.component.html
+++ b/src/app/shared/components/radio/radio.component.html
@@ -1,5 +1,5 @@
 <div [class]="wrapperClasses()">
-  <div class="radio-input-wrapper">
+  <div class="radio__wrapper">
     <input
       #radioElement
       type="radio"
@@ -18,11 +18,6 @@
       (focus)="handleFocus($event)"
       (blur)="handleBlur($event)"
     />
-    <span class="radio-indicator" aria-hidden="true">
-      @if (checked()) {
-        <span class="radio-indicator__dot"></span>
-      }
-    </span>
   </div>
 
   <eb-input-label
