--- a/src/app/features/architecture/architecture.component.scss
+++ b/src/app/features/architecture/architecture.component.scss
@@ -1,20 +1,16 @@
+@use '../../shared/styles/feature-page' as page;
+
 .architecture {
   &__header {
-    text-align: center;
-    margin-bottom: var(--space-4);
+    @include page.feature-header;
   }
 
   &__title {
-    margin: 0 0 var(--space-2);
-    font-size: var(--font-size-3xl);
-    font-weight: var(--font-weight-bold);
-    color: var(--color-text);
+    @include page.feature-title;
   }
 
   &__subtitle {
-    color: var(--color-text-secondary);
-    font-size: var(--font-size-lg);
-    margin: 0;
+    @include page.feature-subtitle;
   }
 
   &__search {
