--- a/src/app/shared/components/radio/radio.component.scss
+++ b/src/app/shared/components/radio/radio.component.scss
@@ -44,7 +44,8 @@
   }
 
   &:disabled,
-  &--disabled {
+  &--disabled,
+  &[aria-disabled='true'] {
     cursor: not-allowed;
     pointer-events: none;
   }
