--- a/src/app/shared/components/select/select.component.html
+++ b/src/app/shared/components/select/select.component.html
@@ -3,10 +3,10 @@
     [forId]="labelId()"
     [label]="label()"
     [required]="required()"
-    [labelClass]="'select-label' + (disabled() ? ' select-label--disabled' : '')"
+    [labelClass]="'select__label' + (disabled() ? ' select__label--disabled' : '')"
   />
 
-  <div class="select-container">
+  <div class="select__inner">
     <eb-select-button
       #selectButton
       [buttonId]="label() ? 'select-' + labelId() : undefined"
