--- a/src/app/shared/styles/_feature-page.scss
+++ b/src/app/shared/styles/_feature-page.scss
@@ -49,7 +49,7 @@
 }
 
 @mixin feature-placeholder-icon {
-  font-size: 4rem;
+  font-size: var(--font-size-6xl);
   margin-bottom: var(--space-4);
 }
 
