fix(accessibility): improve accessibility across shared components

--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,4 +1,4 @@
-<article
+<div
   [class]="cardClasses()"
   [attr.role]="cardRole()"
   [attr.aria-label]="ariaLabel()"
@@ -27,4 +27,4 @@
   <footer class="card__footer">
     <ng-content select="[card-footer]" />
   </footer>
-</article>
+</div>
