--- a/src/app/shared/components/tabs/tab-button/tab-button.component.scss
+++ b/src/app/shared/components/tabs/tab-button/tab-button.component.scss
@@ -15,7 +15,7 @@
   }
 
   &--active {
-    color: var(--color-primary);
+    color: var(--color-primary-hover);
     border-bottom-color: var(--color-primary);
   }
 
