--- a/src/styles/themes/_dark-cool.scss
+++ b/src/styles/themes/_dark-cool.scss
@@ -54,7 +54,7 @@
   // Text colors
   --color-text: #faf5ff;
   --color-text-secondary: #d8b4fe;
-  --color-text-muted: #7e6c99;
+  --color-text-muted: #a39fbc;
   --color-text-disabled: #4c3d66;
   --color-text-inverse: #0f0a1a;
 
