--- a/src/styles/themes/_light-warm.scss
+++ b/src/styles/themes/_light-warm.scss
@@ -39,8 +39,8 @@
   --color-on-error: #ffffff;
 
   // Semantic colors - Info (warm blue)
-  --color-info: #0284c7;
-  --color-info-hover: #0369a1;
+  --color-info: #027dbb;
+  --color-info-hover: #026aa6;
   --color-info-subtle: #f0f9ff;
   --color-on-info: #ffffff;
 
