refactor(checkbox): improve accessibility, fix checkmark not displaying

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,32 @@
+<div style="display: flex; align-items: center; gap: 1rem">
+  <eb-checkbox
+    label="Subscribe to newsletter"
+    [checked]="x"
+    (checkedChange)="x = $event"
+    ariaLabel="Subscribe to newsletter"
+  /><eb-checkbox
+    label="Subscribe to newsletter"
+    [checked]="x"
+    (checkedChange)="x = $event"
+    ariaLabel="Subscribe to newsletter"
+  /><eb-checkbox
+    label="Subscribe to newsletter"
+    [checked]="x"
+    (checkedChange)="x = $event"
+    ariaLabel="Subscribe to newsletter"
+  /><eb-checkbox
+    label="Subscribe to newsletter"
+    [checked]="x"
+    (checkedChange)="x = $event"
+    ariaLabel="Subscribe to newsletter"
+  /><eb-checkbox
+    label="Subscribe to newsletter"
+    [checked]="x"
+    (checkedChange)="x = $event"
+    ariaLabel="Subscribe to newsletter"
+  />
+</div>
+
 <eb-container>
   <eb-stack spacing="md">
     <header class="home__header">
