--- a/src/app/shared/components/checkbox/checkbox.component.html
+++ b/src/app/shared/components/checkbox/checkbox.component.html
@@ -23,6 +23,7 @@
   </div>
 
   <eb-input-label
+    [id]="labelId()"
     [forId]="checkboxId()"
     [label]="label()"
     [required]="required()"
