refactor(container): improve storybook and styles

--- a/src/styles/themes/_high-contrast-dark.scss
+++ b/src/styles/themes/_high-contrast-dark.scss
@@ -8,7 +8,7 @@
 
 [data-theme='high-contrast-dark'] {
   // Primary brand colors - bright blue on black
-  --color-primary: #66b3ff;
+  --color-primary: #0073e6;
   --color-primary-hover: #99ccff;
   --color-primary-active: #cce6ff;
   --color-primary-subtle: rgba(102, 179, 255, 0.2);
