--- a/src/app/shared/components/textarea/textarea.component.scss
+++ b/src/app/shared/components/textarea/textarea.component.scss
@@ -111,7 +111,7 @@
   &--outlined {
     border-width: 2px;
     border-color: var(--color-border-strong);
-    background-color: transparent;
+    background-color: var(--color-background);
   }
 
   // Resize modifiers
