--- a/src/app/shared/components/grid/grid.component.html
+++ b/src/app/shared/components/grid/grid.component.html
@@ -2,8 +2,8 @@
   [class]="gridClasses()"
   [style]="gridStyles()"
   [attr.role]="role()"
-  [attr.aria-label]="ariaLabel()"
-  [attr.aria-labelledby]="ariaLabelledBy()"
+  [attr.aria-label]="role() ? ariaLabel() : null"
+  [attr.aria-labelledby]="role() ? ariaLabelledBy() : null"
 >
   <ng-content />
 </div>
