refactor(themes): changed surface disabled to darker color

--- a/src/styles/themes/_dark-cool.scss
+++ b/src/styles/themes/_dark-cool.scss
@@ -48,6 +48,7 @@
   // Surface colors - cool purple-tinted
   --color-background: #0f0a1a;
   --color-surface: #1a1325;
+  --color-surface-disabled: #1a1325;
   --color-surface-hover: #2d2438;
   --color-surface-active: #3d3350;
   --color-surface-elevated: #1e1730;
