--- a/src/styles/themes/_dark-default.scss
+++ b/src/styles/themes/_dark-default.scss
@@ -48,6 +48,7 @@
   // Surface colors - deep blue-gray
   --color-background: #0f172a;
   --color-surface: #1e293b;
+  --color-surface-disabled: #1e293b;
   --color-surface-hover: #334155;
   --color-surface-active: #475569;
   --color-surface-elevated: #1e293b;
